--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,17 +13,26 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
+  theme: dark
   cname: status2.pickyzz.dev
   # baseUrl: /your-repo-name
+  faviconSvg: https://pickyzz.dev/favicon.svg
   logoUrl: https://pickyzz.dev/favicon.svg
-  name: Pickyzz services uptime monitor
+  name: Pickyzz services status
   introTitle: "**Pickyzz.dev** services uptime monitor."
 #   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
-  navbar:
-    - title: Status
-      href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+#   navbar:
+#     - title: Status
+#       href: /
+#     - title: GitHub
+#       href: https://github.com/$OWNER/$REPO
+   metaTags:
+    - name: "color-scheme"
+      content: "dark light"
+    - name: "robots"
+      content: "noindex"
+i18n:
+  footer: Pickyzz 2022
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
