--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,8 +13,8 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  theme: dark
-  cname: status2.pickyzz.dev
+  theme: night
+  cname: status.pickyzz.dev
   # baseUrl: /your-repo-name
   faviconSvg: https://pickyzz.dev/favicon.svg
   logoUrl: https://pickyzz.dev/favicon.svg
