--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,7 +3,7 @@ owner: pickyzz # Your GitHub organization or username, where this repository liv
 repo: uptime-monitor # The name of this repository
 
 sites:
-  - name: pickyzz.dev
+  - name: Blog
     url: https://www.pickyzz.dev
   - name: Opengraph generrate service
     url: https://og.pickyzz.dev
@@ -18,17 +18,17 @@ status-website:
   # baseUrl: /your-repo-name
   faviconSvg: https://pickyzz.dev/favicon.svg
   logoUrl: https://pickyzz.dev/favicon.svg
-  name: Pickyzz services status
+#   name: Pickyzz services status
   introTitle: "**Pickyzz.dev** services uptime monitor."
 #   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
-    - title: Main website
+    - title: home
+      href: /
+    - title: blog
       href: https://pickyzz.dev
-#     - title: GitHub
-#       href: https://github.com/$OWNER/$REPO
 
 i18n:
-  footer: Pickyzz.dev
+  footer: 2022 Parinya T.
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
