--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -18,7 +18,7 @@ status-website:
   # baseUrl: /your-repo-name
   faviconSvg: https://pickyzz.dev/favicon.svg
   logoUrl: https://pickyzz.dev/favicon.svg
-#   name: Pickyzz services status
+  name: Pickyzz
   introTitle: "**Pickyzz.dev** services uptime monitor."
 #   introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
   navbar:
